generously overlap tab background svg parts to avoid background bleeding due to rounding issues on devices with non-integer devicePixelRatios #42

--- a/css/chrome-tabs.styl
+++ b/css/chrome-tabs.styl
@@ -21,12 +21,11 @@ activeTabBackgroundColor = #fff
     position relative
     width 100%
     height 100%
-    overflow hidden
 
   .chrome-tab
     position absolute
     left 0
-    height 34px
+    height 36px
     width 240px
     border 0
     margin 0
